--- a/conference/NetDevConf2025-0x19/mq-cake-paper/isea.tex
+++ b/conference/NetDevConf2025-0x19/mq-cake-paper/isea.tex
@@ -10,6 +10,8 @@
 \usepackage{amsmath}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+\usepackage{svg}
+\usepackage{subcaption}
 \pdfinfo{
 /Title (mq-cake: Scaling software rate limiting across CPU cores)  
 /Author (Jonas Köppeler, Toke H\o{}iland-J\o{}rgensen, Stefan Schmid)}
